--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
   <footer class="bg-dark text-light text-center py-3">
     <p>&copy; 2024 Pet Haven. All Rights Reserved.</p>
     <div class="social-icons">
-      <a href="https://www.instagram.com/jannu.si/" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/aman.k9571/" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/janhvi-singh-0a87072b6/" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/janhvis250" target="_blank" class="icon"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/aman23-cmd" target="_blank" class="icon"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
