--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
   <!-- Social Media Icons -->
   <div class="social-icons text-center">
-    <a href="https://www.instagram.com/jannu.si/" class="icon" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/aman.k9571/" class="icon" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/janhvi-singh-0a87072b6/" class="icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/janhvis250" class="icon" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="tel:9219435121" class="icon"><i class="fas fa-phone"></i></a>
-    <a href="mailto:singhjanhvi2006@gmail.com" class="icon"><i class="fas fa-envelope"></i></a>
+    <a href="https://github.com/aman23-cmd" class="icon" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="tel:6387815821" class="icon"><i class="fas fa-phone"></i></a>
+    <a href="mailto:amankau2000@gmail.com" class="icon"><i class="fas fa-envelope"></i></a>
   </div>
 
   <!-- Hero Section -->
@@ -151,7 +151,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center py-3">
-    <p>&copy; 2024 Pet Haven. All Rights Reserved.</p>
+    <p>&copy; 2024 Pet Haven, copyright aman23-cmd (AMAN KAUSHAL)--</p>
     <div class="social-icons">
       <a href="https://www.instagram.com/aman.k9571/" target="_blank" class="icon"><i class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/janhvi-singh-0a87072b6/" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a>
